--- a/.github/workflows/nodepint-linux.yml
+++ b/.github/workflows/nodepint-linux.yml
@@ -17,9 +17,9 @@ jobs:
     - name: Add conda to system path
       run: |
         echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      run: |
-        conda env update --file envs/env_daffyduck.yaml --name base
+    # - name: Install dependencies
+    #   run: |
+    #     conda env update --file envs/env_daffyduck.yaml --name base
     - name: Install NodePinT & Pytest
       run: |
         python setup.py develop && conda install pytest
