--- a/.github/workflows/nodepint-linux.yml
+++ b/.github/workflows/nodepint-linux.yml
@@ -20,6 +20,9 @@ jobs:
     # - name: Install dependencies
     #   run: |
     #     conda env update --file envs/env_daffyduck.yaml --name base
+    - name: Install datasets from GitHub
+      run: |
+        python -m pip install "datasets @ git+https://github.com/huggingface/datasets#datasets[jax]"
     - name: Install NodePinT & Pytest
       run: |
         python setup.py develop && conda install pytest
